// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockTable render when blocks are loaded renders a table with all the blocks 1`] = `
<ForwardRef
  hover={true}
  striped={true}
>
  <thead>
    <tr>
      <th>
        Block Hash
      </th>
      <th>
        Timestamp
      </th>
      <th>
        # Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <BlockRow
      block={
        Object {
          "id": "1",
          "timestamp": "2020-02-05T03:46:32.000",
          "transactions": Array [],
        }
      }
      key="1"
    />
    <BlockRow
      block={
        Object {
          "id": "2",
          "timestamp": "2020-02-04T03:46:32.000",
          "transactions": Array [],
        }
      }
      key="2"
    />
    <BlockRow
      block={
        Object {
          "id": "3",
          "timestamp": "2020-02-03T03:46:32.000",
          "transactions": Array [],
        }
      }
      key="3"
    />
  </tbody>
</ForwardRef>
`;

exports[`BlockTable render when blocks are loading renders the TableLoadingView 1`] = `
<ForwardRef
  hover={true}
  striped={true}
>
  <thead>
    <tr>
      <th>
        Block Hash
      </th>
      <th>
        Timestamp
      </th>
      <th>
        # Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <TableLoadingView />
  </tbody>
</ForwardRef>
`;

exports[`BlockTable render when there are no blocks loaded renders the EmptyTableView 1`] = `
<ForwardRef
  hover={true}
  striped={true}
>
  <thead>
    <tr>
      <th>
        Block Hash
      </th>
      <th>
        Timestamp
      </th>
      <th>
        # Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <EmptyTableView />
  </tbody>
</ForwardRef>
`;
